# opik

apps/opik-backend/: pom.xml
apps/opik-documentation/documentation/fern/docs/agent_optimization/: overview.mdx
apps/opik-documentation/documentation/fern/docs/agent_optimization/advanced/: prompt_customization.mdx
apps/opik-documentation/documentation/fern/docs/agent_optimization/algorithms/: evolutionary_optimizer.mdx  fewshot_bayesian_optimizer.mdx  gepa_optimizer.mdx  hierarchical_reflective_optimizer.mdx  optimizer_parameters_guide.mdx  parameter_optimizer.mdx
apps/opik-documentation/documentation/fern/docs/agent_optimization/opik_optimizer/: concepts.mdx  faq.mdx  reference.mdx
apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/: optimize_prompts.mdx
apps/opik-frontend/src/components/pages-shared/dashboards/AddEditCloneDashboardDialog/: DashboardDialogDetailsStep.tsx
dev/: langchain_simple_agent_with_guardrails.py  pyproject.toml
sdks/opik_optimizer/src/opik_optimizer/algorithms/evolutionary_optimizer/: evolutionary_optimizer.py
sdks/opik_optimizer/src/opik_optimizer/algorithms/gepa_optimizer/: gepa_optimizer.py
sdks/opik_optimizer/src/opik_optimizer/algorithms/hierarchical_reflective_optimizer/: hierarchical_reflective_optimizer.py
sdks/python/src/opik/api_objects/: opik_client.py
sdks/python/src/opik/api_objects/prompt/chat/: chat_prompt.py
sdks/python/src/opik/guardrails/: __init__.py  guardrail.py  schemas.py
sdks/python/src/opik/guardrails/guards/: __init__.py
sdks/python/tests/e2e/: test_prompt.py
(+12 files in other folders)
